grab the wolfpackmaker executable

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,8 @@ steps:
   - pip install aiohttp[speedups]
   - curl -L 'https://get.kalka.io/curseforge.db' > curseforge.db
   - git clone https://git.kalka.io/kalka/wolfpackmaker
+  - curl -L https://get.kalka.io/wolfpackmaker.tar.gz > wolfpackmaker/wolfpackmaker.tar.gz
+  - tar -zxvf wolfpackmaker.tar.gz
 
 - name: lock
   image: kalka/packmaker
