forgot to add the bat file

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ steps:
 - name: package
   image: kalka/packmaker
   commands:
-  - zip -r Wolfpack-Odin.zip wolfpackmaker/requirements.txt wolfpackmaker/wolfpackmaker.py .minecraft instance.cfg mmc-pack.json wolfpackodin.png
+  - zip -r Wolfpack-Odin.zip wolfpackmaker/requirements.txt wolfpackmaker/wolfpackmaker.py wolfpackmaker/wolfpackmaker.bat .minecraft instance.cfg mmc-pack.json wolfpackodin.png
   - zip -r config.zip .minecraft mmc-pack.json
 - name: mod-list
   image: kalka/packmaker
