--- a/.drone.yml
+++ b/.drone.yml
@@ -11,8 +11,8 @@ steps:
   - python -VVV
   - curl -L 'https://get.kalka.io/curseforge.db' > curseforge.db
   - git clone https://git.kalka.io/kalka/wolfpackmaker
-  - pip install -r wolfpackmaker/requirements.txt
-  - pip install git+https://git.kalka.io/kalka/packmaker.git
+  - python -m pip install -r wolfpackmaker/requirements.txt
+  - python -m pip install git+https://git.kalka.io/kalka/packmaker.git
 - name: lock
   image: archlinux:base-devel
   commands:
