--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: packmaker
 
 steps:
 - name: pre-lock
-  image: archlinux:base-devel
+  image: kalka/drone-entrypoint
   commands:
   - neofetch
   - python -VVV
