--- a/instance.cfg
+++ b/instance.cfg
@@ -9,7 +9,7 @@ OverrideMemory=true
 OverrideWindow=false
 PermGen=128
 PostExitCommand=
-PreLaunchCommand=$INST_DIR\\wolfpackmaker\\wolfpackmaker.bat wolfpack-odin build-mods -b . --cache-dir ../../
+PreLaunchCommand=$INST_DIR\\wolfpackmaker\\wolfpackmaker.bat Odin build-mods -b . --cache-dir ../../
 WrapperCommand=
 iconKey=wolfpackodin
 name=Wolfpack-Odin
