--- a/packmaker.yml
+++ b/packmaker.yml
@@ -220,7 +220,7 @@ mods:
     serveronly: true
     url: 'https://ci.lucko.me/job/spark/lastSuccessfulBuild/artifact/spark-forge/build/libs/spark-forge.jar'
 - worldedit:
-    servonly: true
+    serveronly: true
 name: Wolfpack-Odin
 resourcepacks: []
 title: Wolfpack-Odin
