--- a/packmaker.yml
+++ b/packmaker.yml
@@ -46,6 +46,7 @@ mods:
 - kubejs-blood-magic:
 - kubejs-create:
 - kubejs-mekanism:
+- rftools-power:
 - create:
 - polymorph:
 - bad-wither-no-cookie-reloaded:
@@ -77,6 +78,7 @@ mods:
 - placebo:
 - jade:
 - jaopca:
+- rftools-builder:
 - tool-belt:
 - gravestone-mod:
 - bookshelf:
@@ -88,11 +90,13 @@ mods:
 - construction-wand:
 - building-gadgets:
 - ai-improvements:
+- rftools-base:
 - endergetic:
 - ftb-backups:
 - ftb-chunks:
 - yungs-api:
 - morph-o-tool:
+- rftools-storage:
 - autumnity:
 - refined-storage:
 - curious-elytra:
@@ -149,6 +153,7 @@ mods:
 - observerlib:
 - dark-utilities:
 - runelic:
+- rftools-utility:
 - server-tab-info:
 - decorative-blocks:
 - akashic-tome:
