--- a/packmaker.yml
+++ b/packmaker.yml
@@ -168,24 +168,24 @@ mods:
 - curious-shulker-boxes:
 - xaeros-minimap:
 - trashslot:
-- natures-compass:
-- netherportalfix:
-- scannable:
-- astral-sorcery:
-- mystical-world:
-- jeitweaker:
-- ftb-ultimine:
-- ars-nouveau:
-- charm-reforged:
-- simply-light:
-- simply-backpacks:
-- redstone-gauges-and-switches:
-- eidolon:
-- productivebees:
-- mmmmmmmmmmmm:
-- alchemistry:
-- the-bumblezone-forge:
-- space-bosstools:
+# - natures-compass:
+# - netherportalfix:
+# - scannable:
+# - astral-sorcery:
+# - mystical-world:
+# - jeitweaker:
+# - ftb-ultimine:
+# - ars-nouveau:
+# - charm-reforged:
+# - simply-light:
+# - simply-backpacks:
+# - redstone-gauges-and-switches:
+# - eidolon:
+# - productivebees:
+# - mmmmmmmmmmmm:
+# - alchemistry:
+# - the-bumblezone-forge:
+# - space-bosstools:
 # - obfuscate:
 # - abnormals-delight:
 # - abundance:
