add advanced chimneys

--- a/packmaker.yml
+++ b/packmaker.yml
@@ -220,6 +220,7 @@ mods:
 - codechicken-lib-1-8:
 - valhelsia-core:
 - valhelsia-structures:
+- advanced-chimneys:
 - inventory-tweaks-renewed:
 - a-lib:
 - geckolib:
