--- a/packmaker.yml
+++ b/packmaker.yml
@@ -67,6 +67,7 @@ mods:
 - tetra:
 - powah:
 - thermal-foundation:
+    url: 'https://media.forgecdn.net/files/3247/1/thermal_foundation-1.16.4-1.2.0.jar'
 - lumberjack:
 - ftb-gui-library:
 - woot:
@@ -79,6 +80,7 @@ mods:
 - cofh-core:
 - ender-storage-1-8:
 - thermal-expansion:
+    url: 'https://media.forgecdn.net/files/3247/0/thermal_expansion-1.16.4-1.2.0.jar'
 - terraforged:
 - abnormals-core:
 - waystones:
