--- a/packmaker.yml
+++ b/packmaker.yml
@@ -78,6 +78,7 @@ mods:
 - buzzier-bees:
 - mekanism-tools:
 - cofh-core:
+    url: 'https://media.forgecdn.net/files/3246/994/cofh_core-1.16.4-1.2.0.jar'
 - ender-storage-1-8:
 - thermal-expansion:
     url: 'https://media.forgecdn.net/files/3247/0/thermal_expansion-1.16.4-1.2.0.jar'
