add entity culling

--- a/packmaker.yml
+++ b/packmaker.yml
@@ -37,7 +37,9 @@ mods:
     clientonly: true
 - no-potion-shift:
     clientonly: true
-    url: 'https://get.kalka.io/mods/nopotionshift_1.16.4-1.6.0.jar'
+    url: 'https://get.kalka.io/mods/nopotionshift_1.16.4-1.6.0-unofficial.jar'
+- entityculling:
+    clientonly: true
 - clear-skies-forge-port:
 - nofog:
 - journeymap:
