update craftpresence properties

--- a/.minecraft/config/craftpresence.properties
+++ b/.minecraft/config/craftpresence.properties
@@ -2,9 +2,9 @@
 #Current Version -> v1.7.6 (Schema v1)
 #
 #Last synchronized:
-#Sat Mar 20 12:55:59 EDT 2021
+#Wed Mar 24 13:48:55 EDT 2021
 Large_Image_Key_Format=&MAINMENU&&DIMENSION&
-Enable_Join_Requests=true
+Enable_Join_Requests=false
 Default_Icon=wolfpackodin
 Show_Elapsed_Time=true
 Default_Dimension_Icon=wolfpackodin
@@ -16,23 +16,23 @@ Strip_Extra_Gui_Elements=false
 Last_MC_Version_ID=754
 Language_ID=en_us
 Verbose_Mode=false
-Enable_Per-Item_System=true
-Detect_Dimension_Data=true
+Enable_Per-Item_System=false
 Client_ID=814606266617430058
+Detect_Dimension_Data=true
 Player_Inner_Info_Placeholder=(&health&)
-Details_Message_Format=&MAINMENU&&DIMENSION&
+Details_Message_Format=&BIOME& | &DIMENSION&
 Enable_Commands=true
 Vivecraft_Message=Playing in VR via Vivecraft
 Loading_Message=Loading...
-Enable_Per-Entity_System=false
 Party_Privacy=1
+Enable_Per-Entity_System=false
 Detect_MCUpdater_Instance=true
-Default\ Biome\ Icon=wolfpackodin
-Format_Words=true
+Default\ Biome\ Icon=unknown
 Player_List_Placeholder=&current& / &max& Players
+Format_Words=true
 Main_Menu_Message=Idle
-Config_Gui_Keybind=320
 Include_Extra_Gui_Classes=false
+Config_Gui_Keybind=320
 Auto_Register=false
 Gui_Background_Color=minecraft;textures/gui/options_background.png
 Fallback_Pack_Placeholder=
@@ -44,21 +44,21 @@ Server_Messages=[default;&motd&]
 Show_Logging_in_Chat=false
 Biome_Messages=[default;&biome&]
 Small_Image_Text_Format=&SERVER& &PACK&
-Enable_Per-Gui_System=false
-Render_Tooltips=true
 Dimension_Messages=[default;&dimension&]
 Modpack_Message=&name&
+Enable_Per-Gui_System=false
+Render_Tooltips=true
 Schema_Version=1
 Default_Server_Icon=wolfpackodin
 Button_Background_Color=minecraft;textures/gui/widgets.png
-Game_State_Message_Format=&SERVER& &PACK&
-Small_Image_Key_Format=&SERVER&&PACK&
+Game_State_Message_Format=&MAINMENU&
 Player_Items_Placeholder=Items\: &main&
+Small_Image_Key_Format=&SERVER&&PACK&
 Reduced_Background_Tint=true
 Detect_World_Data=true
 Detect_Biome_Data=true
-Split_Character=;
 LAN_Game_Message=Playing on a LAN Server
+Split_Character=;
 Debug_Mode=false
 Default_Server_Name=Minecraft Server
 Mods_Placeholder=&modcount& Mod(s)
@@ -67,11 +67,11 @@ Entity_Target_Messages=[default;Targeting &entity&]
 Detect_MultiMC_Instance=true
 Tooltip_Background_Color=0xF0100010
 Player_Coordinate_Placeholder=At &xPosition&, &zPosition&
-Strip_Translation_Colors=false
 Rounding_Size=3
+Strip_Translation_Colors=false
 Player_Health_Placeholder=Health\: &current&/&max&
-Large_Image_Text_Format=&MAINMENU&&DIMENSION&
-Entity_Attacking_Messages=[default;Attacking &entity&]
 Default_Server_Motd=A Minecraft Server
-Singleplayer_Game_Message=Playing Singleplayer
+Entity_Attacking_Messages=[default;Attacking &entity&]
+Large_Image_Text_Format=&MAINMENU&&DIMENSION&
+Singleplayer_Game_Message=Singleplayer
 Refresh_Rate=2
