--- a/packmaker.yml
+++ b/packmaker.yml
@@ -41,9 +41,8 @@ mods:
 - entityculling:
     clientonly: true
     url: 'https://get.kalka.io/mods/entityculling-1.1.0-unofficial.jar'
-- clear-skies-forge-port:
-- nofog:
-- journeymap:
+- xaeros-minimap:
+- xaeros-worldmap:
 - kubejs:
 - kubejs-blood-magic:
 - kubejs-create:
