--- a/packmaker.yml
+++ b/packmaker.yml
@@ -215,6 +215,7 @@ mods:
 - simply-jetpacks-2:
 - tellme:
 - rhino:
+- aquaculture:
 - codechicken-lib-1-8:
 - valhelsia-core:
 - valhelsia-structures:
