Prepare for new clientside script

--- a/.minecraft/config/itlt-client.toml
+++ b/.minecraft/config/itlt-client.toml
@@ -25,5 +25,5 @@
 	#The name of the dedicated server to add.
 	ServerName = "Wolfpack Odin"
 	#The ip of the dedicated server to add.
-	ServerIP = "odin.kalka.io"
+	ServerIP = "woofmc.xyz"
 
