--- a/packmaker.yml
+++ b/packmaker.yml
@@ -1,9 +1,5 @@
-authors:
-- Kalka
-files:
-- location: overrides
-forge: 35.1.37
-minecraft: 1.16.5
+modloader: Forge
+version: 1.16.5
 mods:
 - ctm:
     url: 'https://media.forgecdn.net/files/3137/659/CTM-MC1.16.1-1.1.2.6.jar'
@@ -248,7 +244,3 @@ mods:
     serveronly: true
 - pregenforge:
     serveronly: true
-name: Wolfpack-Odin
-resourcepacks: []
-title: Wolfpack-Odin
-version: 1.0.0
