Update to Forge 36.1.4, switch to new Wolfpackmaker script

--- a/instance.cfg
+++ b/instance.cfg
@@ -9,7 +9,7 @@ OverrideMemory=true
 OverrideWindow=false
 PermGen=128
 PostExitCommand=
-PreLaunchCommand=$INST_DIR\wolfpackmaker\multimc.bat -r Odin
+PreLaunchCommand=$INST_DIR\\wolfpackmaker\\multimc.bat -r Odin
 WrapperCommand=
 iconKey=wolfpackodin
 name=Wolfpack-Odin
