--- a/instance.cfg
+++ b/instance.cfg
@@ -9,7 +9,7 @@ OverrideMemory=true
 OverrideWindow=false
 PermGen=128
 PostExitCommand=
-PreLaunchCommand=$INST_DIR\\wolfpackmaker\\multimc.bat -r Odin -c
+PreLaunchCommand=$INST_DIR\\wolfpackmaker\\multimc.bat -r Odin -c -mmc
 WrapperCommand=
 iconKey=wolfpackodin
 name=Wolfpack-Odin
