add twilight forest

--- a/manifest.yml
+++ b/manifest.yml
@@ -212,6 +212,7 @@ mods:
 - trash-cans:
 - trashslot:
 - travel-anchors:
+- the-twilight-forest:
 - upgrade-aquatic:
 - valhelsia-core:
 - valhelsia-structures:
