change loading colors

--- a/.minecraft/kubejs/config/client.properties
+++ b/.minecraft/kubejs/config/client.properties
@@ -1,12 +1,12 @@
 #KubeJS Client Properties
-#Mon Nov 02 04:23:23 GMT 2020
-fmlLogColor=ECEFF4
-barBorderColor=ECEFF4
-overrideColors=true
-fmlMemoryColor=ECEFF4
-barColor=a13d3d
+#Tue Apr 06 01:05:25 EDT 2021
+backgroundColor=242424
 showTagNames=true
+exportAtlases=false
+barBorderColor=cfcfcf
+fmlLogColor=f25e5e
+fmlMemoryColor=d1d1d1
 disableRecipeBook=false
 title=
-exportAtlases=false
-backgroundColor=301919
+barColor=e6e6e6
+overrideColors=true
