--- a/.minecraft/config/craftpresence.properties
+++ b/.minecraft/config/craftpresence.properties
@@ -51,7 +51,7 @@ Render_Tooltips=true
 Schema_Version=1
 Default_Server_Icon=wolfpackodin
 Button_Background_Color=minecraft;textures/gui/widgets.png
-Game_State_Message_Format=&MAINMENU&
+Game_State_Message_Format=&MAINMENU&&SERVER&
 Player_Items_Placeholder=Items\: &main&
 Small_Image_Key_Format=&SERVER&&PACK&
 Reduced_Background_Tint=true
