add effortless building

--- a/manifest.yml
+++ b/manifest.yml
@@ -98,6 +98,7 @@ mods:
 - decorative-blocks-modded-compat:
 - decorative-blocks:
 - druidcraft:
+- effortless-building:
 - eidolon:
 - emojiful:
 - enchantment-descriptions:
