--- a/.drone.yml
+++ b/.drone.yml
@@ -22,10 +22,10 @@ steps:
   commands:
   - zip -r Wolfpack-Odin.zip wolfpackmaker/wolfpackmaker.py wolfpackmaker/wolfpackmaker.bat wolfpackmaker/requirements.txt wolfpackmaker/multimc.bat .minecraft instance.cfg mmc-pack.json wolfpackodin.png
   - zip -r config.zip .minecraft mmc-pack.json
-# - name: mod-list
-#   image: kalka/drone-entrypoint
-#   commands:
-#   - python3 wolfpackmaker/raw_mod_list.py Odin
+- name: mod-list
+  image: kalka/drone-entrypoint
+  commands:
+  - python3 wolfpackmaker/raw_mod_list.py Odin
 - name: upload
   image: plugins/gitea-release
   settings:
